# gh-action-trace

./: Cargo.toml  LICENSE  README.md
src/: main.rs
