[package]
name = "gh-action-trace"
version = "0.1.0"
authors = ["Tarun Pothulapati"]
edition = "2021"


[dependencies]
octocrab = {git="https://github.com/XAMPPRocky/octocrab", rev="13838dcf6526c14b1789cb80918900b4f5254689"}
indicatif = "0.16.2"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16", default-features = false, features = ["trace", "metrics"] }
opentelemetry-jaeger = "0.15"
chrono = "0.4"
clap = "3.0.0-beta.5"
serde_json = "1.0.68"

[workspace]

