[package]
name = "gh-action-trace"
version = "0.2.0"
authors = ["Tarun Pothulapati <tarunpothulapati@outlook.com>"]
edition = "2021"
description = "gh-action-trace is a CLI to create traces for GitHub Action runs by retrieving Action runs metadata from the GitHub API"
readme = "README.md"
repository = "https://github.com/Pothulapati/gh-action-trace"
license = "MIT"
keywords = ["traces", "jaeger", "github-actions", "CI"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
octocrab = "0.15.0"
indicatif = "0.16.2"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16", default-features = false, features = ["trace", "metrics"] }
opentelemetry-jaeger = "0.15"
chrono = "0.4"
clap = "3.0.0-beta.5"
serde_json = "1.0.68"
